--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-
+GOOGLE_MAPS_API_KEY=AIzaSyBXwmKZ1mZoOdNVM0wFiM-k9MuAzhUO5uM
